resolves order total not displaying on mobile

--- a/app/styles/_menu.scss
+++ b/app/styles/_menu.scss
@@ -2,6 +2,7 @@
 .menu,
 .order
 {
+    margin-bottom: 60px;
     padding-top: 15px;
     padding-bottom: 15px;
 
@@ -153,8 +154,9 @@
     border-radius: 4px;
 }
 
-.order-items-template {
-  overflow: hidden;
+.order-items-template
+{
+    overflow: hidden;
 }
 
 #order-total
@@ -195,8 +197,7 @@
 }
 
 input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
-
-   opacity: 1;
-
+input[type=number]::-webkit-outer-spin-button
+{
+    opacity: 1;
 }
